[gd_scene load_steps=6 format=3 uid="uid://cwta5hpjw753i"]

[ext_resource type="Script" path="res://guard/guard.gd" id="1_2qko4"]
[ext_resource type="PackedScene" uid="uid://bktsqmld6r600" path="res://guard/guard_anim.tscn" id="1_24ljv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8w7pb"]
radius = 9.0

[sub_resource type="CircleShape2D" id="CircleShape2D_284q3"]
radius = 100.0

[sub_resource type="CircleShape2D" id="CircleShape2D_j0onp"]
radius = 11.0

[node name="Guard" type="CharacterBody2D"]
collision_layer = 129
script = ExtResource("1_2qko4")

[node name="GuardAnim" parent="." instance=ExtResource("1_24ljv")]
unique_name_in_owner = true
scale = Vector2(2.5, 2.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_8w7pb")

[node name="DetectBox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectBox"]
shape = SubResource("CircleShape2D_284q3")

[node name="AlertBox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="AlertBox"]
shape = SubResource("CircleShape2D_j0onp")
debug_color = Color(0.584625, 0.482082, 0.706517, 0.42)

[node name="RotateTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 3.0
one_shot = true

[node name="ChaseTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="RotateTimer" to="." method="_on_rotate_timer_timeout"]
[connection signal="timeout" from="ChaseTimer" to="." method="_on_chase_timer_timeout"]
